# dcg-feedback-loop

./: .gitignore  README.md  pyproject.toml  validate.ps1
analysis/: closure_argument.md  plot_demo.py
metatron/: __init__.py  closure_check.py  domain.yaml  guarded_solver.py
solver/: __init__.py  baseline_solver.py  delay_comparison.py  divergence_demo.py
tests/: test_closure.py
