[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dcg-feedback-loop"
version = "1.0.0"
description = "Domain closure guard for delayed feedback control systems"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["solver*", "metatron*"]